maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:34: error: illegal start of declaration
  direction = getDirection()
  ^Escaper:35: error: illegal start of declaration
  setDirection(dir)
  ^Escaper:36: error: illegal start of declaration
  if (estFaceMur())
  ^Escaper:37: error: illegal start of declaration
  {
  ^